# S-DANE

./: README.md  exp_configs.py  plot.ipynb  pyproject.toml  requirements.txt  test_polyhedron.py  train.sh  trainval.py
haven/: haven_wizard.py
src/: base_classifier.py  datasets.py  metrics.py  models.py  optimizer.py  utils.py
src/optimizers/: __init__.py  accgradsliding.py  fedred.py  gd.py  sdane.py
