[tool.poetry]
name = "S-DANE"
version = "0.1.0"
description = "This is the official pytorch implementation of the experiments in the paper of: Stabilized Proximal Point Methods for Federated Optimization."
authors = ["Xiaowen Jiang, Anton Rodomanov, Sebastian U. Stich"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "1.24.2"
torch = "2.0.0"
tqdm = "4.66.5"
torchvision = "0.15.1"
scikit-learn = "^1.5.2"
scipy = "^1.12"
urllib3 = "1.26.15"
pickleshare = "0.7.5"
jsonpointer = "2.3"
jsonschema = "4.17.3"
haven-ai = "^0.7.3"
pandas = "1.5.3"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
